[package]
name = "amcl_rust"
version = "0.0.1"
edition = "2021"

[dependencies]
safe_drive = "0.3.13"
std_msgs = { path = "/tmp/safe_drive/amcl_rust/std_msgs" }
sensor_msgs = { path = "/tmp/safe_drive/amcl_rust/sensor_msgs" }
nav_msgs = { path = "/tmp/safe_drive/amcl_rust/nav_msgs" }

[package.metadata.ros]
msg = ["std_msgs","nav_msgs","sensor_msgs"]
msg_dir = "/tmp/safe_drive/amcl_rust"
safe_drive_version = "0.3.13"
